<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_main">

    <TextView
        android:id="@+id/labelCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_header"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:text=""
        android:ems="10"
        android:hint="@string/enter_username"
        android:theme="@style/MyEditText"
        android:inputType="textPersonName"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/labelCreateAccount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/labelCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/labelCreateAccount" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:text=""
        android:hint="@string/password"
        android:textColorHint="@color/hint_color"
        android:inputType="textPassword"
        android:textColor="@color/text_color"
        android:theme="@style/MyEditText"
        app:layout_constraintBottom_toTopOf="@+id/editTextReenterPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <EditText
        android:id="@+id/editTextReenterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:text=""
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:theme="@style/MyEditText"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/create"
        android:textColor="@color/text_color"
        android:background="@drawable/roundshapebtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextReenterPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextReenterPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextReenterPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>